--- a/onnx-example-main1/test/testing-partitioning.ipynb
+++ b/onnx-example-main1/test/testing-partitioning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "0b5453d7",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "c19f03b7",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "id": "a3cdc271",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "60ffbc77",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "be90b0d8",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "id": "388df034",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "335408bc",
    "metadata": {},
    "outputs": [],
@@ -200,90 +200,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "08cc6524",
+   "execution_count": 40,
+   "id": "c407e62f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'X_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 21\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m gender_flip_map\u001b[38;5;241m.\u001b[39mget(val, val)\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# --------------------------\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Create flipped training set\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# --------------------------\u001b[39;00m\n\u001b[0;32m---> 21\u001b[0m X_train_flipped \u001b[38;5;241m=\u001b[39m X_train\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m     22\u001b[0m X_train_flipped[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAttribute9\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m X_train_flipped[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAttribute9\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(flip_gender_all)\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# y_train does not change\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# ============================================================\n",
-    "# Metamorphic Data Augmentation: Gender Flipping\n",
-    "# ============================================================\n",
+    "# age, gender, and language proxies\n",
     "\n",
-    "# Gender transformation map (same as above)\n",
-    "gender_flip_map = {\n",
-    "    1: 2,\n",
-    "    2: 1,\n",
-    "    3: 5,\n",
-    "    5: 3\n",
-    "}\n",
+    "# age\n",
     "\n",
-    "def flip_gender_all(val):\n",
-    "    \"\"\"Flip gender if possible, otherwise return original.\"\"\"\n",
-    "    return gender_flip_map.get(val, val)\n",
+    "def test_age_accuracy_similar():\n",
+    "    _ , X_test, _ , y_test = load_data()\n",
+    "    sess = load_onnx_model()\n",
+    "\n",
+    "    AGE_COL = \"persoon_leeftijd_bij_onderzoek\"\n",
+    "\n",
+    "    assert AGE_COL in X_test.columns, f\"{AGE_COL} not in dataset\"\n",
+    "\n",
+    "    filter_empty = X_test[AGE_COL].notna()\n",
+    "    X_test = X_test[filter_empty]\n",
+    "    y_test = y_test[filter_empty]\n",
+    "\n",
+    "    age = X_test[AGE_COL]\n",
+    "\n",
+    "    age_groups = {\n",
+    "        \"young\": age < 30,\n",
+    "        \"middle\": (age >= 30) & (age < 60),\n",
+    "        \"senior\": age >= 60,\n",
+    "    }\n",
     "\n",
     "\n",
-    "# --------------------------\n",
-    "# Create flipped training set\n",
-    "# --------------------------\n",
-    "X_train_flipped = X_train.copy()\n",
-    "X_train_flipped[\"Attribute9\"] = X_train_flipped[\"Attribute9\"].apply(flip_gender_all)\n",
+    "    y_pred = predict_labels(sess, X_test)\n",
     "\n",
-    "# y_train does not change\n",
-    "y_train_flipped = y_train.copy()\n",
+    "    accuracies = {}\n",
+    "    for name, filtered in age_groups.items():\n",
+    "        if filtered.sum() < 30:\n",
+    "            continue\n",
+    "        accuracy = accuracy_score(y_test[filtered], y_pred[filtered])\n",
+    "        accuracies[name] = accuracy\n",
+    "        print(f\"[Partition age] {name:>6}: accuracy={accuracy:.3f}, number={filtered.sum()}\")\n",
     "\n",
-    "# --------------------------\n",
-    "# Augment the training data\n",
-    "# --------------------------\n",
-    "X_train_aug = pd.concat([X_train, X_train_flipped], ignore_index=True)\n",
-    "y_train_aug = pd.concat([y_train, y_train_flipped], ignore_index=True)\n",
+    "    accuracy_list = list(accuracies.values())\n",
+    "    max_difference = max(accuracy_list) - min(accuracy_list)\n",
     "\n",
-    "print(\"Original training size:\", len(X_train))\n",
-    "print(\"Augmented training size:\", len(X_train_aug))"
+    "\n",
+    "    tolerance = 0.20\n",
+    "    assert max_difference<=tolerance, (f\"{max_difference:.3f} > {tolerance:.3f}. Difference is too large.\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
+   "id": "08cc6524",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # ============================================================\n",
+    "# # Metamorphic Data Augmentation: Gender Flipping\n",
+    "# # ============================================================\n",
+    "\n",
+    "# # Gender transformation map (same as above)\n",
+    "# gender_flip_map = {\n",
+    "#     1: 2,\n",
+    "#     2: 1,\n",
+    "#     3: 5,\n",
+    "#     5: 3\n",
+    "# }\n",
+    "\n",
+    "# def flip_gender_all(val):\n",
+    "#     \"\"\"Flip gender if possible, otherwise return original.\"\"\"\n",
+    "#     return gender_flip_map.get(val, val)\n",
+    "\n",
+    "\n",
+    "# # --------------------------\n",
+    "# # Create flipped training set\n",
+    "# # --------------------------\n",
+    "# X_train_flipped = X_train.copy()\n",
+    "# X_train_flipped[\"Attribute9\"] = X_train_flipped[\"Attribute9\"].apply(flip_gender_all)\n",
+    "\n",
+    "# # y_train does not change\n",
+    "# y_train_flipped = y_train.copy()\n",
+    "\n",
+    "# # --------------------------\n",
+    "# # Augment the training data\n",
+    "# # --------------------------\n",
+    "# X_train_aug = pd.concat([X_train, X_train_flipped], ignore_index=True)\n",
+    "# y_train_aug = pd.concat([y_train, y_train_flipped], ignore_index=True)\n",
+    "\n",
+    "# print(\"Original training size:\", len(X_train))\n",
+    "# print(\"Augmented training size:\", len(X_train_aug))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "6ffc32cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf_aug = DecisionTreeClassifier()\n",
-    "clf_aug.fit(X_train_aug, y_train_aug)"
+    "# clf_aug = DecisionTreeClassifier()\n",
+    "# clf_aug.fit(X_train_aug, y_train_aug)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "f627c8cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a copy of test set\n",
-    "X_test_flipped = X_test.copy()\n",
+    "# # Create a copy of test set\n",
+    "# X_test_flipped = X_test.copy()\n",
     "\n",
-    "# Apply to Attribute9 (column 8)\n",
-    "X_test_flipped['Attribute9'] = X_test_flipped['Attribute9'].apply(flip_gender_all)\n",
+    "# # Apply to Attribute9 (column 8)\n",
+    "# X_test_flipped['Attribute9'] = X_test_flipped['Attribute9'].apply(flip_gender_all)\n",
     "\n",
-    "# Predict with flipped gender\n",
-    "y_pred_original = clf_aug.predict(X_test)\n",
-    "y_pred_flipped = clf_aug.predict(X_test_flipped)\n",
+    "# # Predict with flipped gender\n",
+    "# y_pred_original = clf_aug.predict(X_test)\n",
+    "# y_pred_flipped = clf_aug.predict(X_test_flipped)\n",
     "\n",
-    "# Compare\n",
-    "print(\"Accuracy after gender flip:\", metrics.accuracy_score(y_test, y_pred_flipped))\n",
-    "print(\"Changed predictions:\", np.sum(y_pred_original != y_pred_flipped))\n"
+    "# # Compare\n",
+    "# print(\"Accuracy after gender flip:\", metrics.accuracy_score(y_test, y_pred_flipped))\n",
+    "# print(\"Changed predictions:\", np.sum(y_pred_original != y_pred_flipped))\n"
    ]
   }
  ],
