finished part 2, also created the folder for part 3

--- a/onnx-example-main1/test/testing-partitioning-metamorphic.ipynb
+++ b/onnx-example-main1/test/testing-partitioning-metamorphic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "0b5453d7",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "c19f03b7",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "a3cdc271",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "60ffbc77",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "be90b0d8",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "388df034",
    "metadata": {},
    "outputs": [],
@@ -122,9 +122,9 @@
     "\n",
     "# gender\n",
     "\n",
-    "def test_gender_accuracy_similar():\n",
+    "def test_gender_accuracy_similar(model_path):\n",
     "    _ , X_test, _ , y_test = load_data()\n",
-    "    sess = load_onnx_model()\n",
+    "    sess = load_onnx_model(model_path)\n",
     "\n",
     "    GENDER_COL = \"persoon_geslacht_vrouw\"\n",
     "\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "335408bc",
    "metadata": {},
    "outputs": [],
@@ -166,9 +166,9 @@
     "\n",
     "# gender\n",
     "\n",
-    "def test_gender_rate():\n",
+    "def test_gender_rate(model_path):\n",
     "    _ , X_test, _ , _ = load_data()\n",
-    "    sess = load_onnx_model()\n",
+    "    sess = load_onnx_model(model_path)\n",
     "\n",
     "    GENDER_COL = \"persoon_geslacht_vrouw\"\n",
     "\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "c407e62f",
    "metadata": {},
    "outputs": [],
@@ -209,9 +209,9 @@
     "\n",
     "# age\n",
     "\n",
-    "def test_age_accuracy_similar():\n",
+    "def test_age_accuracy_similar(model_path):\n",
     "    _ , X_test, _ , y_test = load_data()\n",
-    "    sess = load_onnx_model()\n",
+    "    sess = load_onnx_model(model_path)\n",
     "\n",
     "    AGE_COL = \"persoon_leeftijd_bij_onderzoek\"\n",
     "\n",
@@ -252,7 +252,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
+   "id": "dc1ffc73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LANGUAGE_COLS = [\n",
+    "#     \"persoonlijke_eigenschappen_nl_lezen3\",\n",
+    "#     \"persoonlijke_eigenschappen_nl_lezen4\",\n",
+    "#     \"persoonlijke_eigenschappen_nl_schrijven0\",\n",
+    "#     \"persoonlijke_eigenschappen_nl_schrijven1\",\n",
+    "#     \"persoonlijke_eigenschappen_nl_schrijven2\",\n",
+    "#     \"persoonlijke_eigenschappen_nl_schrijven3\",\n",
+    "#     \"persoonlijke_eigenschappen_nl_spreken1\",\n",
+    "#     \"persoonlijke_eigenschappen_nl_spreken2\",\n",
+    "#     \"persoonlijke_eigenschappen_nl_spreken3\",\n",
+    "# ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b7978c78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# age, gender, and language proxies\n",
+    "\n",
+    "# language\n",
+    "\n",
+    "def test_language_accuracy_similar(model_path):\n",
+    "    _ , X_test, _ , y_test = load_data()\n",
+    "    sess = load_onnx_model(model_path)\n",
+    "\n",
+    "    LANGUAGE_COL = \"persoonlijke_eigenschappen_spreektaal_anders\"\n",
+    "\n",
+    "    assert LANGUAGE_COL in X_test.columns, f\"{LANGUAGE_COL} not in dataset\"\n",
+    "\n",
+    "\n",
+    "    filter_empty = X_test[LANGUAGE_COL].notna()\n",
+    "    X_test = X_test[filter_empty]\n",
+    "    y_test = y_test[filter_empty]\n",
+    "\n",
+    "    dutch = X_test[LANGUAGE_COL] == 0\n",
+    "    non_dutch = X_test[LANGUAGE_COL] == 1\n",
+    "\n",
+    "    # remove if not needed\n",
+    "    assert dutch.sum() > 40, \"Not enough dutch speaking people!\"\n",
+    "    assert non_dutch.sum() > 40, \"Not enough non_dutch speaking people!\"\n",
+    "\n",
+    "    y_pred = predict_labels(sess, X_test)\n",
+    "\n",
+    "    dutch_accuracy = accuracy_score(y_test[dutch], y_pred[dutch])\n",
+    "    non_dutch_accuracy = accuracy_score(y_test[non_dutch], y_pred[non_dutch])\n",
+    "\n",
+    "    difference = abs(dutch_accuracy - non_dutch_accuracy)\n",
+    "    print(f\"[Partition language] dutch_accuracy={dutch_accuracy:.3f}, non_dutch_accuracy={non_dutch_accuracy:.3f}, diff={difference:.3f}\")\n",
+    "\n",
+    "    tolerance = 0.20\n",
+    "    assert difference<=tolerance, (f\"{difference:.3f} > {tolerance:.3f}. Difference is too large.\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3b0f368f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# age, gender, and language proxies\n",
+    "\n",
+    "# language\n",
+    "\n",
+    "def test_language_rate(model_path):\n",
+    "    _ , X_test, _ , _ = load_data()\n",
+    "    sess = load_onnx_model(model_path)\n",
+    "\n",
+    "    LANGUAGE_COL = \"persoonlijke_eigenschappen_spreektaal_anders\"\n",
+    "\n",
+    "    assert LANGUAGE_COL in X_test.columns, f\"{LANGUAGE_COL} not in dataset\"\n",
+    "\n",
+    "    filter_empty = X_test[LANGUAGE_COL].notna()\n",
+    "    X_test = X_test[filter_empty]\n",
+    "\n",
+    "    dutch = X_test[LANGUAGE_COL] == 0\n",
+    "    non_dutch = X_test[LANGUAGE_COL] == 1\n",
+    "\n",
+    "    # remove if not needed\n",
+    "    assert dutch.sum() > 40, \"Not enough dutch speaking people!\"\n",
+    "    assert non_dutch.sum() > 40, \"Not enough non-dutch speaking people!\"\n",
+    "\n",
+    "    y_pred = predict_labels(sess, X_test)\n",
+    "\n",
+    "    dutch_rate = y_pred[dutch].mean()\n",
+    "    non_dutch_rate = y_pred[non_dutch].mean()\n",
+    "\n",
+    "    difference = abs(dutch_rate - non_dutch)\n",
+    "    print(f\"[Partition language] dutch_rate={dutch_rate:.3f}, non_dutch_rate={non_dutch_rate:.3f}, diff={difference:.3f}\")\n",
+    "\n",
+    "    tolerance = 0.20\n",
+    "    assert difference<=tolerance, (f\"{difference:.3f} > {tolerance:.3f}. Difference is too large.\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e16047c",
+   "metadata": {},
+   "source": [
+    "# Metamorphic Data Augmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ddcf1d38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================\n",
+    "# Metamorphic Data Augmentation: Gender Flipping\n",
+    "# ============================================================\n",
+    "\n",
+    "# Gender transformation map (same as above)\n",
+    "gender_flip_map = {\n",
+    "    1: 0,\n",
+    "    0: 1\n",
+    "}\n",
+    "\n",
+    "def flip_gender_all(val):\n",
+    "    \"\"\"Flip gender if possible, otherwise return original.\"\"\"\n",
+    "    return gender_flip_map.get(val, val)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2e54d949",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def flip_gender_train():\n",
+    "\n",
+    "#     # --------------------------\n",
+    "#     # Create flipped training set\n",
+    "#     # --------------------------\n",
+    "#     X_train_flipped = X_train.copy()\n",
+    "#     X_train_flipped[\"Attribute9\"] = X_train_flipped[\"Attribute9\"].apply(flip_gender_all)\n",
+    "\n",
+    "#     # y_train does not change\n",
+    "#     y_train_flipped = y_train.copy()\n",
+    "\n",
+    "#     # --------------------------\n",
+    "#     # Augment the training data\n",
+    "#     # --------------------------\n",
+    "#     X_train_aug = pd.concat([X_train, X_train_flipped], ignore_index=True)\n",
+    "#     y_train_aug = pd.concat([y_train, y_train_flipped], ignore_index=True)\n",
+    "\n",
+    "#     print(\"Original training size:\", len(X_train))\n",
+    "#     print(\"Augmented training size:\", len(X_train_aug))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4fec164c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clf_aug = DecisionTreeClassifier()\n",
+    "# clf_aug.fit(X_train_aug, y_train_aug)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "71d03d5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flig_gender_test(model_path):\n",
+    "    _ , X_test, _ , y_test = load_data()\n",
+    "    sess = load_onnx_model(model_path)\n",
+    "\n",
+    "    # Create a copy of test set\n",
+    "    X_test_flipped = X_test.copy()\n",
+    "\n",
+    "    X_test_flipped['persoon_geslacht_vrouw'] = X_test_flipped['persoon_geslacht_vrouw'].apply(flip_gender_all)\n",
+    "\n",
+    "    # Predict with flipped gender\n",
+    "    y_pred_original = predict_labels(sess, X_test)\n",
+    "    y_pred_flipped = predict_labels(sess, X_test_flipped)\n",
+    "\n",
+    "    # Compare\n",
+    "    print(\"Accuracy after gender flip:\", accuracy_score(y_test, y_pred_flipped))\n",
+    "    print(\"Changed predictions:\", np.sum(y_pred_original != y_pred_flipped))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "08cc6524",
    "metadata": {},
    "outputs": [],
@@ -295,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "id": "6ffc32cd",
    "metadata": {},
    "outputs": [],
@@ -306,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "id": "f627c8cc",
    "metadata": {},
    "outputs": [],
