Part 3 with the models - fixed some things in part 2

--- a/onnx-example-main1/test/testing-partitioning-metamorphic.ipynb
+++ b/onnx-example-main1/test/testing-partitioning-metamorphic.ipynb
@@ -2,7 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
+   "id": "7c502800",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: onnxruntime in c:\\users\\carol\\anaconda3\\lib\\site-packages (1.23.2)\n",
+      "Requirement already satisfied: coloredlogs in c:\\users\\carol\\anaconda3\\lib\\site-packages (from onnxruntime) (15.0.1)\n",
+      "Requirement already satisfied: flatbuffers in c:\\users\\carol\\anaconda3\\lib\\site-packages (from onnxruntime) (24.3.25)\n",
+      "Requirement already satisfied: numpy>=1.21.6 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from onnxruntime) (1.24.3)\n",
+      "Requirement already satisfied: packaging in c:\\users\\carol\\anaconda3\\lib\\site-packages (from onnxruntime) (23.1)\n",
+      "Requirement already satisfied: protobuf in c:\\users\\carol\\anaconda3\\lib\\site-packages (from onnxruntime) (4.25.3)\n",
+      "Requirement already satisfied: sympy in c:\\users\\carol\\anaconda3\\lib\\site-packages (from onnxruntime) (1.11.1)\n",
+      "Requirement already satisfied: humanfriendly>=9.1 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from coloredlogs->onnxruntime) (10.0)\n",
+      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from sympy->onnxruntime) (1.3.0)\n",
+      "Requirement already satisfied: pyreadline3 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from humanfriendly>=9.1->coloredlogs->onnxruntime) (3.5.4)\n",
+      "Requirement already satisfied: onnx in c:\\users\\carol\\anaconda3\\lib\\site-packages (1.20.0)\n",
+      "Requirement already satisfied: numpy>=1.23.2 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from onnx) (1.24.3)\n",
+      "Requirement already satisfied: protobuf>=4.25.1 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from onnx) (4.25.3)\n",
+      "Requirement already satisfied: typing_extensions>=4.7.1 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from onnx) (4.7.1)\n",
+      "Requirement already satisfied: ml_dtypes>=0.5.0 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from onnx) (0.5.4)\n",
+      "Requirement already satisfied: skl2onnx in c:\\users\\carol\\anaconda3\\lib\\site-packages (1.19.1)\n",
+      "Requirement already satisfied: onnx>=1.2.1 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from skl2onnx) (1.20.0)\n",
+      "Requirement already satisfied: scikit-learn>=1.1 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from skl2onnx) (1.3.0)\n",
+      "Requirement already satisfied: numpy>=1.23.2 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from onnx>=1.2.1->skl2onnx) (1.24.3)\n",
+      "Requirement already satisfied: protobuf>=4.25.1 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from onnx>=1.2.1->skl2onnx) (4.25.3)\n",
+      "Requirement already satisfied: typing_extensions>=4.7.1 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from onnx>=1.2.1->skl2onnx) (4.7.1)\n",
+      "Requirement already satisfied: ml_dtypes>=0.5.0 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from onnx>=1.2.1->skl2onnx) (0.5.4)\n",
+      "Requirement already satisfied: scipy>=1.5.0 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from scikit-learn>=1.1->skl2onnx) (1.11.1)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from scikit-learn>=1.1->skl2onnx) (1.2.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from scikit-learn>=1.1->skl2onnx) (2.2.0)\n",
+      "Requirement already satisfied: pandas in c:\\users\\carol\\anaconda3\\lib\\site-packages (2.0.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from pandas) (2023.3.post1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from pandas) (2023.3)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from pandas) (1.24.3)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Requirement already satisfied: numpy in c:\\users\\carol\\anaconda3\\lib\\site-packages (1.24.3)\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\carol\\anaconda3\\lib\\site-packages (1.3.0)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from scikit-learn) (1.24.3)\n",
+      "Requirement already satisfied: scipy>=1.5.0 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from scikit-learn) (1.11.1)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from scikit-learn) (1.2.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\carol\\anaconda3\\lib\\site-packages (from scikit-learn) (2.2.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !pip install onnxruntime\n",
+    "# !pip install onnx\n",
+    "# !pip install skl2onnx\n",
+    "# !pip install pandas\n",
+    "# !pip install numpy\n",
+    "# !pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "0b5453d7",
    "metadata": {},
    "outputs": [],
@@ -31,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "c19f03b7",
    "metadata": {},
    "outputs": [],
@@ -39,7 +98,7 @@
     "# Let's load the dataset\n",
     "def load_data():\n",
     "\n",
-    "    data = pd.read_csv('onnx-example-main1/data/synth_data_for_training.csv')\n",
+    "    data = pd.read_csv('../data/synth_data_for_training.csv')\n",
     "\n",
     "    # Let's specify the features and the target\n",
     "    y = data['checked']\n",
@@ -62,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "a3cdc271",
    "metadata": {},
    "outputs": [],
@@ -75,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "id": "60ffbc77",
    "metadata": {},
    "outputs": [],
@@ -83,17 +142,23 @@
     "def predict(sess, X) -> np.ndarray:\n",
     "    input = sess.get_inputs()[0].name\n",
     "    # if you run into issues do X.values.astype(\"float32\")\n",
-    "    outputs = sess.run(None, {input: X})\n",
+    "    \n",
+    "    if hasattr(X, \"values\"):\n",
+    "        X_arr = X.values.astype(\"float32\")\n",
+    "    else:\n",
+    "        X_arr = np.asarray(X, dtype=\"float32\")\n",
+    "        \n",
+    "    outputs = sess.run(None, {input: X_arr})\n",
     "    predictions = outputs[0]\n",
     "\n",
     "    if predictions.ndim == 2 and predictions.shape[1] == 2:\n",
     "        return predictions[:,1]\n",
-    "    return predictions.astype(\"float32\")\n"
+    "    return predictions.astype(\"float32\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "be90b0d8",
    "metadata": {},
    "outputs": [],
@@ -113,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "388df034",
    "metadata": {},
    "outputs": [],
@@ -141,7 +206,7 @@
     "    assert women.sum() > 40, \"Not enough women!\"\n",
     "    assert other.sum() > 40, \"Not enough others!\"\n",
     "\n",
-    "    y_pred = predict_labels(sess, X_test)\n",
+    "    y_pred = predict_labels(sess, X_test.values.astype(\"float32\"))\n",
     "\n",
     "    women_accuracy = accuracy_score(y_test[women], y_pred[women])\n",
     "    other_accuracy = accuracy_score(y_test[other], y_pred[other])\n",
@@ -150,14 +215,12 @@
     "    print(f\"[Partition gender] women_accuracy={women_accuracy:.3f}, other_accuracy={other_accuracy:.3f}, diff={difference:.3f}\")\n",
     "\n",
     "    tolerance = 0.18\n",
-    "    assert difference<=tolerance, (f\"{difference:.3f} > {tolerance:.3f}. Difference is too large.\")\n",
-    "\n",
-    "\n"
+    "    assert difference<=tolerance, (f\"{difference:.3f} > {tolerance:.3f}. Difference is too large.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "335408bc",
    "metadata": {},
    "outputs": [],
@@ -193,14 +256,12 @@
     "    print(f\"[Partition gender] women_rate={women_rate:.3f}, other_rate={other_rate:.3f}, diff={difference:.3f}\")\n",
     "\n",
     "    tolerance = 0.22\n",
-    "    assert difference<=tolerance, (f\"{difference:.3f} > {tolerance:.3f}. Difference is too large.\")\n",
-    "\n",
-    "\n"
+    "    assert difference<=tolerance, (f\"{difference:.3f} > {tolerance:.3f}. Difference is too large.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "c407e62f",
    "metadata": {},
    "outputs": [],
@@ -252,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "dc1ffc73",
    "metadata": {},
    "outputs": [],
@@ -272,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "b7978c78",
    "metadata": {},
    "outputs": [],
@@ -310,14 +371,12 @@
     "    print(f\"[Partition language] dutch_accuracy={dutch_accuracy:.3f}, non_dutch_accuracy={non_dutch_accuracy:.3f}, diff={difference:.3f}\")\n",
     "\n",
     "    tolerance = 0.20\n",
-    "    assert difference<=tolerance, (f\"{difference:.3f} > {tolerance:.3f}. Difference is too large.\")\n",
-    "\n",
-    "\n"
+    "    assert difference<=tolerance, (f\"{difference:.3f} > {tolerance:.3f}. Difference is too large.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "id": "3b0f368f",
    "metadata": {},
    "outputs": [],
@@ -330,7 +389,7 @@
     "    _ , X_test, _ , _ = load_data()\n",
     "    sess = load_onnx_model(model_path)\n",
     "\n",
-    "    LANGUAGE_COL = \"persoonlijke_eigenschappen_spreektaal_anders\"\n",
+    "    LANGUAGE_COL = \"persoonlijke_eigenschappen_taaleis_voldaan\"\n",
     "\n",
     "    assert LANGUAGE_COL in X_test.columns, f\"{LANGUAGE_COL} not in dataset\"\n",
     "\n",
@@ -349,14 +408,11 @@
     "    dutch_rate = y_pred[dutch].mean()\n",
     "    non_dutch_rate = y_pred[non_dutch].mean()\n",
     "\n",
-    "    difference = abs(dutch_rate - non_dutch)\n",
+    "    difference = abs(dutch_rate - non_dutch_rate)\n",
     "    print(f\"[Partition language] dutch_rate={dutch_rate:.3f}, non_dutch_rate={non_dutch_rate:.3f}, diff={difference:.3f}\")\n",
     "\n",
     "    tolerance = 0.20\n",
-    "    assert difference<=tolerance, (f\"{difference:.3f} > {tolerance:.3f}. Difference is too large.\")\n",
-    "\n",
-    "\n",
-    "\n"
+    "    assert difference<=tolerance, (f\"{difference:.3f} > {tolerance:.3f}. Difference is too large.\")"
    ]
   },
   {
@@ -369,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ddcf1d38",
    "metadata": {},
    "outputs": [],
@@ -386,58 +442,17 @@
     "\n",
     "def flip_gender_all(val):\n",
     "    \"\"\"Flip gender if possible, otherwise return original.\"\"\"\n",
-    "    return gender_flip_map.get(val, val)\n",
-    "\n"
+    "    return gender_flip_map.get(val, val)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "2e54d949",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def flip_gender_train():\n",
-    "\n",
-    "#     # --------------------------\n",
-    "#     # Create flipped training set\n",
-    "#     # --------------------------\n",
-    "#     X_train_flipped = X_train.copy()\n",
-    "#     X_train_flipped[\"Attribute9\"] = X_train_flipped[\"Attribute9\"].apply(flip_gender_all)\n",
-    "\n",
-    "#     # y_train does not change\n",
-    "#     y_train_flipped = y_train.copy()\n",
-    "\n",
-    "#     # --------------------------\n",
-    "#     # Augment the training data\n",
-    "#     # --------------------------\n",
-    "#     X_train_aug = pd.concat([X_train, X_train_flipped], ignore_index=True)\n",
-    "#     y_train_aug = pd.concat([y_train, y_train_flipped], ignore_index=True)\n",
-    "\n",
-    "#     print(\"Original training size:\", len(X_train))\n",
-    "#     print(\"Augmented training size:\", len(X_train_aug))\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "4fec164c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clf_aug = DecisionTreeClassifier()\n",
-    "# clf_aug.fit(X_train_aug, y_train_aug)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "id": "71d03d5c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def flig_gender_test(model_path):\n",
+    "def flip_gender_test(model_path):\n",
     "    _ , X_test, _ , y_test = load_data()\n",
     "    sess = load_onnx_model(model_path)\n",
     "\n",
@@ -457,7 +472,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
+   "id": "3dab4c0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================\n",
+    "# Metamorphic Data Augmentation: Language Flipping\n",
+    "# ============================================================\n",
+    "\n",
+    "# Gender transformation map (same as above)\n",
+    "language_flip_map = {\n",
+    "    1: 0,\n",
+    "    0: 1\n",
+    "}\n",
+    "\n",
+    "def flip_language_all(val):\n",
+    "    \"\"\"Flip language if possible, otherwise return original.\"\"\"\n",
+    "    return language_flip_map.get(val, val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "96866b5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flip_language_test(model_path):\n",
+    "    _ , X_test, _ , y_test = load_data()\n",
+    "    sess = load_onnx_model(model_path)\n",
+    "\n",
+    "    # Create a copy of test set\n",
+    "    X_test_flipped = X_test.copy()\n",
+    "\n",
+    "    X_test_flipped[\"persoonlijke_eigenschappen_taaleis_voldaan\"] = X_test_flipped[\"persoonlijke_eigenschappen_taaleis_voldaan\"].apply(flip_language_all)\n",
+    "\n",
+    "    # Predict with flipped gender\n",
+    "    y_pred_original = predict_labels(sess, X_test)\n",
+    "    y_pred_flipped = predict_labels(sess, X_test_flipped)\n",
+    "\n",
+    "    # Compare\n",
+    "    print(\"Accuracy after language flip:\", accuracy_score(y_test, y_pred_flipped))\n",
+    "    print(\"Changed predictions:\", np.sum(y_pred_original != y_pred_flipped))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2dd8abd",
+   "metadata": {},
+   "source": [
+    "# Testing the models!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "9ad29832",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_1 = \"..\\model\\model_1.onnx\"\n",
+    "model_2 = \"..\\model\\model_2.onnx\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "905969a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Partition gender] women_accuracy=0.907, other_accuracy=0.894, diff=0.013\n",
+      "[Partition gender] women_accuracy=0.941, other_accuracy=0.922, diff=0.018\n",
+      "[Partition gender] women_rate=0.023, other_rate=0.038, diff=0.015\n",
+      "[Partition gender] women_rate=0.059, other_rate=0.074, diff=0.015\n",
+      "[Partition age]  young: accuracy=0.762, number=105\n",
+      "[Partition age] middle: accuracy=0.903, number=2531\n",
+      "[Partition age] senior: accuracy=0.916, number=526\n",
+      "[Partition age]  young: accuracy=0.867, number=105\n",
+      "[Partition age] middle: accuracy=0.938, number=2531\n",
+      "[Partition age] senior: accuracy=0.913, number=526\n",
+      "[Partition language] dutch_accuracy=0.900, non_dutch_accuracy=0.901, diff=0.000\n",
+      "[Partition language] dutch_accuracy=0.930, non_dutch_accuracy=0.933, diff=0.003\n",
+      "[Partition language] dutch_rate=0.052, non_dutch_rate=0.011, diff=0.040\n",
+      "[Partition language] dutch_rate=0.102, non_dutch_rate=0.038, diff=0.064\n",
+      "Accuracy after gender flip: 0.9003795066413662\n",
+      "Changed predictions: 0\n",
+      "Accuracy after gender flip: 0.931056293485136\n",
+      "Changed predictions: 0\n",
+      "Accuracy after language flip: 0.8991144845034789\n",
+      "Changed predictions: 94\n",
+      "Accuracy after language flip: 0.931056293485136\n",
+      "Changed predictions: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_gender_accuracy_similar(model_1)\n",
+    "test_gender_accuracy_similar(model_2)\n",
+    "\n",
+    "test_gender_rate(model_1)\n",
+    "test_gender_rate(model_2)\n",
+    "\n",
+    "test_age_accuracy_similar(model_1)\n",
+    "test_age_accuracy_similar(model_2)\n",
+    "\n",
+    "test_language_accuracy_similar(model_1)\n",
+    "test_language_accuracy_similar(model_2)\n",
+    "\n",
+    "test_language_rate(model_1)\n",
+    "test_language_rate(model_2)\n",
+    "\n",
+    "flip_gender_test(model_1)\n",
+    "flip_gender_test(model_2)\n",
+    "\n",
+    "flip_language_test(model_1)\n",
+    "flip_language_test(model_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "08cc6524",
    "metadata": {},
    "outputs": [],
@@ -500,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "6ffc32cd",
    "metadata": {},
    "outputs": [],
@@ -511,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f627c8cc",
    "metadata": {},
    "outputs": [],
@@ -528,7 +667,7 @@
     "\n",
     "# # Compare\n",
     "# print(\"Accuracy after gender flip:\", metrics.accuracy_score(y_test, y_pred_flipped))\n",
-    "# print(\"Changed predictions:\", np.sum(y_pred_original != y_pred_flipped))\n"
+    "# print(\"Changed predictions:\", np.sum(y_pred_original != y_pred_flipped))"
    ]
   }
  ],
@@ -548,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
